# resume-builder

./: .gitignore  README.md  pyproject.toml  resume.yaml.example
src/: latex_generator.py  main.py
templates/: basic.tex.jinja2  two_column.tex.jinja2
